--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
-@plugin "daisyui";
-
-@config "../../tailwind.config.ts";
+@plugin "daisyui" {
+  themes: acid --default, sunset --prefersdark;
+};
