--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,3 +3,8 @@
 @plugin "daisyui" {
   themes: acid --default, sunset --prefersdark;
 };
+
+.gradient-text {
+  @apply bg-clip-text text-transparent;
+  @apply bg-gradient-to-br from-indigo-500 via-fuchsia-500 to-pink-500;
+}
